# pythonstart-cc

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  core.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  core.py
